MyDevOrg/src/objects/Developer_task__c.object
<CustomObject>
    <fields>
        <fullName>Commitment_Date__c</fullName>
        <label>Commitment Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Developer_name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Developer name</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Do_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Progress_note__c</fullName>
        <label>Progress note</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Not Started</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In Progress</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Re-work</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Complete</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Canceled</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Summary__c</fullName>
        <label>Summary</label>
        <required>true</required>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Task_type__c</fullName>
        <label>Task type</label>
        <picklist>
            <picklistValues>
                <fullName>Analysis</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Design</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Coding</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unit testing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Data fix</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Test Environment setup</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>User_Story__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User Story</label>
        <referenceTo>Product_Backlog__c</referenceTo>
        <relationshipName>Dev_items</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Developer task</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>TSK{00000}</displayFormat>
        <label>Developer task ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Developer tasks</pluralLabel>
    <recordTypes>
        <fullName>re</fullName>
        <active>true</active>
        <label>re</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>